--- a/assets/style.css
+++ b/assets/style.css
@@ -10,3 +10,9 @@ header .header-wrap{
 .banner-section .add-style{
 	margin: -116px 0px 0 146px;
 }
+.image-holder{
+	background-image: url(./media/team.png);
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
