--- a/assets/style.css
+++ b/assets/style.css
@@ -34,3 +34,6 @@ header .header-wrap{
 .deal-section .cards .deal-card{
  width: 342px;
 }
+/* .choose-section .choose-details .add-style{
+	margin-left: 221px;
+} */
